--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -302,17 +302,9 @@
                 ></a
               >
             </li>
-            <li>
+            <li class="mr-60">
               <a href="#"
                 ><i class="lnr lnr-heart"></i><span class="my-cart"><span>Yêu</span><span>Thích (0)</span></span></a
-              >
-            </li>
-            <li>
-              <a href="#"
-                ><i class="lnr lnr-user"></i
-                ><span class="my-cart"
-                  ><span> <strong>Sign in</strong> Or</span><span> Join My Site</span></span
-                ></a
               >
             </li>
           </ul>
