--- a/src/main/webapp/app/product-for-client/list/product-for-client.component.html
+++ b/src/main/webapp/app/product-for-client/list/product-for-client.component.html
@@ -3,7 +3,7 @@
     <div class="single-product" *ngFor="let product of products; trackBy: trackId; let i = index" data-cy="entityTable">
       <!-- Product Image Start -->
       <div class="pro-img">
-        <a href="product.html">
+        <a (click)="viewDetail(product)">
           <img class="primary-img" src="./content/img/products/36.jpg" alt="single-product" />
           <img class="secondary-img" src="./content/img/products/37.jpg" alt="single-product" />
         </a>
